<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_step_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include android:id="@+id/content_step_detail"
        layout="@layout/content_step_details" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_previous_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_arrow_back_white_24dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_arrow_forward_white_24dp"/>

</RelativeLayout>