<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_ingredients"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_steps"
        style="@style/FragmentStepDetailsPrimaryText"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/default_margin"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/step_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/card_item" />

</LinearLayout>

